--- a/vars/ee.yml
+++ b/vars/ee.yml
@@ -1,6 +1,6 @@
 ---
 # Base Image
-ee_base_image: registry.redhat.io/ansible-automation-platform-24/ee-supported-rhel8:latest
+ee_base_image: registry.redhat.io/ansible-automation-platform-25/ee-minimal-rhel8:latest
 
 # Git Login
 git_user: someUser
@@ -42,172 +42,8 @@ git_password: somePassword
 #         - RUN echo This is a post-install command!
 
 ee_list:
-  - name: ee-supported-azure-keeper
+  - name: ee-ocp-virt
     dependencies:
-      python:
-        # Keeper
-        - importlib_metadata
-        - keeper-secrets-manager-core
-        - keeper-secrets-manager-helper
-        # Azure
-        - packaging
-        - requests[security]
-        - xmltodict
-        - msgraph-sdk==1.0.0
-        - azure-cli-core==2.34.0
-        - azure-common==1.1.11
-        - azure-identity==1.14.0
-        - azure-mgmt-authorization==2.0.0
-        - azure-mgmt-apimanagement==3.0.0
-        - azure-mgmt-batch==16.2.0
-        - azure-mgmt-cdn==11.0.0
-        - azure-mgmt-compute==26.1.0
-        - azure-mgmt-containerinstance==9.0.0
-        - azure-mgmt-core==1.3.0
-        - azure-mgmt-containerregistry==9.1.0
-        - azure-containerregistry==1.1.0
-        - azure-mgmt-containerservice==20.0.0
-        - azure-mgmt-datalake-store==1.0.0
-        - azure-mgmt-datafactory==2.0.0
-        - azure-mgmt-dns==8.0.0
-        - azure-mgmt-marketplaceordering==1.1.0
-        - azure-mgmt-monitor==3.0.0
-        - azure-mgmt-managedservices==6.0.0
-        - azure-mgmt-managementgroups==1.0.0
-        - azure-mgmt-network==19.1.0
-        - azure-mgmt-nspkg==2.0.0
-        - azure-mgmt-privatedns==1.0.0
-        - azure-mgmt-redis==13.0.0
-        - azure-mgmt-resource==21.1.0
-        - azure-mgmt-rdbms==10.0.0
-        - azure-mgmt-search==8.0.0
-        - azure-mgmt-servicebus==7.1.0
-        - azure-mgmt-sql==3.0.1
-        - azure-mgmt-storage==19.0.0
-        - azure-mgmt-trafficmanager==1.0.0b1
-        - azure-mgmt-web==6.1.0
-        - azure-nspkg==2.0.0
-        - azure-storage-blob==12.11.0
-        - azure-core==1.28.0
-        - azure-keyvault==4.2.0
-        - azure-mgmt-keyvault==10.0.0
-        - azure-mgmt-cosmosdb==6.4.0
-        - azure-mgmt-hdinsight==9.0.0
-        - azure-mgmt-devtestlabs==9.0.0
-        - azure-mgmt-loganalytics==12.0.0
-        - azure-mgmt-automation==1.0.0
-        - azure-mgmt-iothub==2.2.0
-        - azure-iot-hub==2.6.1
-        - azure-mgmt-recoveryservices==2.0.0
-        - azure-mgmt-recoveryservicesbackup==3.0.0
-        - azure-mgmt-notificationhubs==7.0.0
-        - azure-mgmt-eventhub==10.1.0
       galaxy:
         collections:
-          - name: azure.azcollection
-          - name: keepersecurity.keeper_secrets_manager
-
-  - name: ee-supported-keeper
-    dependencies:
-      python:
-        # Keeper
-        - importlib_metadata
-        - keeper-secrets-manager-core
-        - keeper-secrets-manager-helper
-      galaxy:
-        collections:
-          - name: keepersecurity.keeper_secrets_manager
-
-  - name: ee-supported-keeper-ldap
-    dependencies:
-      system:
-        - openldap-devel
-      python:
-        # Keeper
-        - importlib_metadata
-        - keeper-secrets-manager-core
-        - keeper-secrets-manager-helper
-        # LDAP
-        - python-ldap
-      galaxy:
-        collections:
-          - name: keepersecurity.keeper_secrets_manager
-
-  - name: ee-supported-keeper-netscaler
-    dependencies:
-      python:
-        # Keeper
-        - importlib_metadata
-        - keeper-secrets-manager-core
-        - keeper-secrets-manager-helper
-      galaxy:
-        collections:
-          - name: keepersecurity.keeper_secrets_manager
-    build_files:
-      - src: files/nitro-python-1.0_kamet.tar.gz
-        dest: folders
-    build_steps:
-      prepend_final:
-        - ADD _build/folders/nitro-python-1.0_kamet.tar.gz /tmp/nitro-python-1.0_kamet.tar.gz
-      append_final:
-        - RUN python3 -m pip install /tmp/nitro-python-1.0_kamet.tar.gz
-
-  - name: ee-supported-keeper-networking
-    dependencies:
-      python:
-        # Keeper
-        - importlib_metadata
-        - keeper-secrets-manager-core
-        - keeper-secrets-manager-helper
-        # Networking
-        - requests
-        - dnacentersdk
-        - paramiko
-        - unidecode
-        - pysnmp
-      galaxy:
-        collections:
-          - name: keepersecurity.keeper_secrets_manager
-          - name: community.general
-          - name: lvrfrc87.git_acp
-    build_steps:
-      append_final:
-        - RUN python3 -m pip install switch_driver@git+https://{{ git_user }}:{{ git_password }}@gitserver.example.com/project/switchdriver
-        - RUN python3 -m pip install librenms_api@git+https://{{ git_user }}:{{ git_password }}@gitserver.example.com/project/librenms_api
-        - RUN python3 -m pip install wireshark_oui@git+https://{{ git_user }}:{{ git_password }}@gitserver.example.com/project/wireshark_oui
-        - RUN python3 -m pip install email_blaster@git+https://{{ git_user }}:{{ git_password }}@gitserver.example.com/project/email_blaster
-
-  - name: ee-supported-keeper-openshift
-    dependencies:
-      python:
-        # Keeper
-        - importlib_metadata
-        - keeper-secrets-manager-core
-        - keeper-secrets-manager-helper
-        # Openshift
-        - pyyaml
-        - kubernetes
-      galaxy:
-        collections:
-          - name: redhat.openshift
-          - name: keepersecurity.keeper_secrets_manager
-
-  - name: ee-supported-keeper-powershell
-    dependencies:
-      python:
-        # Keeper
-        - importlib_metadata
-        - keeper-secrets-manager-core
-        - keeper-secrets-manager-helper
-      galaxy:
-        collections:
-          - name: keepersecurity.keeper_secrets_manager
-      system:
-        - libicu [platform:rpm]
-    build_steps:
-      append_final:
-        - RUN rpm -i https://github.com/PowerShell/PowerShell/releases/download/v7.4.2/powershell-7.4.2-1.rh.x86_64.rpm
-        - RUN pwsh -Command Install-Module vmware.powercli -Force
-        - RUN pwsh -Command Set-PowerCLIConfiguration -Scope AllUsers -ParticipateInCeip 0 -Confirm:0 -WarningAction SilentlyContinue
-        - RUN pwsh -Command Install-Module Microsoft.Graph.Users.Actions -Force
-        - RUN pwsh -Command Install-Module Microsoft.Graph.Applications -Force
+          - name: redhat.openshift_virtualization
